# MC-Server

./: .gitignore  Cargo.toml  config.toml  protocol_test.py  push.py
minecraft/: Cargo.toml
minecraft/src/: error.rs  lib.rs  types.rs  version.rs
minecraft/src/chat/: message.rs
minecraft/src/protocol/: common.rs  handshake.rs  mod.rs  packet.rs  ping.rs  response.rs
minecraft/src/protocol/server/: mod.rs  packet.rs  status.rs
minecraft/src/protocol/server/request/: handshake.rs  login_start.rs  mod.rs  ping.rs
minecraft/src/protocol/server/response/: login.rs  mod.rs  pong.rs
minecraft/src/util/: binary.rs  reader.rs  varint.rs  writer.rs
server/: Cargo.toml
server/src/: config.rs  conn.rs  lib.rs  net.rs  packet.rs  reader.rs  server.rs  session.rs
src/: main.rs
