[package]
name = "server"
version = "0.1.0"
authors = ["ItsHusky01 <itshusky01@outlook.com>"]
edition = "2021"

[dependencies]
minecraft = { path = "../minecraft" }
serde = "*"
serde_derive = "*"
toml = "*"
log = "*"
futures = "*"
async-std = { version = "1.6", features = ["attributes"] }
async-trait = "*"