[package]
name = "server"
version = "0.1.0"
authors = ["ItsHusky01 <itshusky01@outlook.com>"]
edition = "2021"

[dependencies]
minecraft = { path = "../minecraft" }
serde = "*"
serde_derive = "*"
toml = "*"
log = "*"
futures = "*"
async-std = "*"
async-trait = "*"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]